<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_photo">remove_photo</string>
    <string name="check">check</string>
    <string name="last_name_optional">Last name (optional)</string>
    <string name="first_name">First name</string>
    <string name="image_of_group">Image of group</string>
    <string name="group_name">Group name</string>
    <string name="accept">accept</string>
    <string name="cancel">cancel</string>
    <string name="add_user_phone">Add user phone</string>
    <string name="message">Message</string>
</resources>