<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/_36sdp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ImageView
    android:id="@+id/image_group"
    android:layout_width="@dimen/_100sdp"
    android:layout_height="@dimen/_100sdp"
    android:src="@drawable/ic_person"
    android:background="@drawable/circular"
    android:contentDescription="@string/image_of_group" />
    <EditText
        android:id="@+id/et_group"
        android:layout_marginTop="@dimen/_16sdp"
        android:padding="@dimen/_16sdp"
        android:hint="@string/group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="13"
        android:background="@drawable/oval"
        android:importantForAutofill="no" />
    <LinearLayout
        android:layout_marginTop="@dimen/_32sdp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/accept"/>
    </LinearLayout>

</LinearLayout>